# NAMICSeeding

./: .gitignore  CMakeLists.txt  README  participants.txt
Code/: CMakeLists.txt
Code/Algorithms/: RandomMatrixGeneration.h
Code/Filters/: CMakeLists.txt  itkHoughTransformRadialVotingImageFilter.h  itkHoughTransformRadialVotingImageFilter.txx  itkMultiScaleLoGDistanceImageFilter.h  itkMultiScaleLoGDistanceImageFilter.txx  maxima.cpp
Examples/: CMakeLists.txt
Examples/DistanceLoG/: .CMakeLists.txt.swp  CMakeLists.txt  DistanceLoGFilter2D.cxx  DistanceLoGFilter3D.cxx
Examples/HungarianAssign/: CMakeLists.txt  Hungarian_Main.cxx
Examples/HungarianAssign/.svn/: entries
Examples/HungarianAssign/.svn/text-base/: CMakeLists.txt.svn-base  RandomMatrixGeneration.txx.svn-base  hungarian_algorithm.h.svn-base  hungarian_algorithm.txx.svn-base
Examples/LocalMaxima/: CMakeLists.txt  CombineSeeds.cxx  LocalMaxima.cxx  LocalMaxima2D.cxx
Examples/Median/: CMakeLists.txt  MedianFilter3D.cxx
Examples/RadialVoting/: CMakeLists.txt  RadialVoting.cpp  RadialVoting.h  RadialVotingFilter3D.cxx
Examples/Utilities/: CMakeLists.txt  iminfo.cxx  setspacing.cxx
Testing/: testimage.tif
